--- a/Bcfier.Renga/Bcfier.Renga.csproj
+++ b/Bcfier.Renga/Bcfier.Renga.csproj
@@ -128,6 +128,11 @@
   <ItemGroup>
     <Folder Include="Data\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\BCFierIcon16x16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
